update work history and added mozillians social profile link

--- a/pages/projects/index.html
+++ b/pages/projects/index.html
@@ -46,6 +46,11 @@
 				        <a class="nav-link" href="https://www.facebook.com/03rishi" target="_blank">
 				        	<i class="fa fa-facebook" aria-hidden="true"></i>
 				        </a>
+					</li>
+					<li class="nav-item active">
+				        <a class="nav-link" href="https://mozillians.org/en-US/u/rgpt/" target="_blank">
+				        	<i class="fa fa-firefox" aria-hidden="true"></i>
+				        </a>
 				    </li>
 			   </ul>
 			</div>
