--- a/pages/qualifications/index.html
+++ b/pages/qualifications/index.html
@@ -47,6 +47,11 @@
 				        <a class="nav-link" href="https://www.facebook.com/03rishi" target="_blank">
 				        	<i class="fa fa-facebook" aria-hidden="true"></i>
 				        </a>
+					</li>
+					<li class="nav-item active">
+				        <a class="nav-link" href="https://mozillians.org/en-US/u/rgpt/" target="_blank">
+				        	<i class="fa fa-firefox" aria-hidden="true"></i>
+				        </a>
 				    </li>
 			   </ul>
 			</div>
@@ -95,8 +100,9 @@
 			              	<a href="https://www.lnmiit.ac.in/">
 			              		<b>The LNM Institute of Information Technology</b>
 			              	</a><br/>
-			              	<b>CGPA : </b><font color="red">8.71</font>/10<br/>
-			              	<b>Stream : </b>Communication and Computer Engineering<br/>
+							  <b>CGPA : </b><font color="red">8.71</font>/10<br/>
+							  <b>Branch Rank : </b> <font color="red">1</font>/51<br/>
+							<b>Stream : </b>Communication and Computer Engineering<br/>
 			              </p>
 			            </div>
 			          </div>
