--- a/pages/workhistory/index.html
+++ b/pages/workhistory/index.html
@@ -47,6 +47,11 @@
 				        <a class="nav-link" href="https://www.facebook.com/03rishi" target="_blank">
 				        	<i class="fa fa-facebook" aria-hidden="true"></i>
 				        </a>
+					</li>
+					<li class="nav-item active">
+				        <a class="nav-link" href="https://mozillians.org/en-US/u/rgpt/" target="_blank">
+				        	<i class="fa fa-firefox" aria-hidden="true"></i>
+				        </a>
 				    </li>
 			   </ul>
 			</div>
@@ -81,21 +86,107 @@
 			
 			<div class="container">
 			    <ul class="timeline">
-			        <li>
+					<li class="timeline-inverted">
+						<div class="timeline-badge">
+							<i class="fa fa-briefcase" aria-hidden="true"></i>
+						</div>
+						<div class="timeline-panel">
+						  <div class="timeline-heading">
+							<h3 class="timeline-title">
+								<b>SLK Software</b> (July’19-Present)
+							</h3>
+							<hr/>
+						  </div>
+						  <div class="timeline-body">
+							<p>
+									<b>Location : </b> Bengaluru, India <br/>
+									<b>Job Type : </b>  Senior Product Engineer (Full Time) <br/>
+									<ul class="mt-3">
+										<li>
+											Currently working on making product cloud ready, scalable and also to work in different network infrastructures.
+										</li>
+										<li>
+										    Mentored interns and product engineers to smoothly bring in new features and integrate with the existing functionalities. 
+										</li>
+										<li>
+											Contributed to architectural designs, roadmap discussions and bringing in improved sophisticated logic behind scraping and automation of SAP Objects. 
+										</li>
+									</ul>
+							</p>
+						  </div>
+						</div>
+					</li><li class="timeline-inverted">
+						<div class="timeline-badge">
+							<i class="fa fa-briefcase" aria-hidden="true"></i>
+						</div>
+						<div class="timeline-panel">
+						  <div class="timeline-heading">
+							<h3 class="timeline-title">
+								<b>Mozilla</b> (Jan’19-Present)
+							</h3>
+							<hr/>
+						  </div>
+						  <div class="timeline-body">
+							<p>
+									<b>Links : </b> <a href="https://mozillians.org/en-US/u/rgpt/">Mozillians Profile</a> ,<a href="https://bugzilla.mozilla.org/user_profile?user_id=545599"> Bugzilla Profile </a><br/>
+									<b>Job Type : </b> Open Source Contributer <br/>
+									<ul class="mt-3">
+										<li>
+											Currently contributing to Marionette
+											which is an automation driver developed by Mozilla to automate firefox. They use it primarily for test automation but
+											it is used heavily in the industry to automate several business processes.
+										</li>
+										<li>Contributed to mozdownload, a pip package to install tool and API. 
+										</li>
+									</ul>
+							</p>
+						  </div>
+						</div>
+					</li>
+					<li>
+						<div class="timeline-badge">
+							<i class="fa fa-briefcase" aria-hidden="true"></i>
+						</div>
+						<div class="timeline-panel">
+						  <div class="timeline-heading">
+							<h3 class="timeline-title">
+								<b>Learn IT, Girl!</b> (March’19-June’19)
+							</h3>
+							<hr/>
+						  </div>
+						  <div class="timeline-body">
+							<p>
+									<b>Certificate Link : </b> <a href="https://www.credential.net/83oh7uaa"> Learn IT, Girl 4th Edition </a> <br/>
+									<b>Role : </b> Mentor <br/>
+									<b>Job Type : </b> Remote Mentorship Programme <br/>
+									<ul class="mt-3">
+										<li>
+											As a mentor, I assisted my mentee in learning a new programming language through
+											a project. Helped her in formulating weekly tasks and guided her to achieve the
+											same along with best coding practices. Architecture designs, wireframes, and a lot
+											of brainstorming sessions were involved during four months. I helped with code reviews
+											and clearing doubts faced by the mentee during the implementation phase.
+										</li>
+									</ul>
+							</p>
+						  </div>
+						</div>
+					</li>
+					<li>
 			          <div class="timeline-badge">
 			          	<i class="fa fa-briefcase" aria-hidden="true"></i>
 			          </div>
 			          <div class="timeline-panel">
 			            <div class="timeline-heading">
 			              <h3 class="timeline-title">
-			              	<b>SLK Software</b> (July’17-Present)
+			              	<b>SLK Software</b> (July’17-June’19)
 			              </h3>
 			              <hr/>
 			            </div>
 			            <div class="timeline-body">
 			              <p>
 			              		<b>Location : </b> Bengaluru, India <br/>
-			              		<b>Job Type : </b>  Full Time <br/>
+			              		<b>Job Type : </b>  Product Engineer (Full Time) <br/>
 			              		<ul class="mt-3">
 			              			<li>
 			              				Developing RPA product to automate repeated business logic which in turn acts as a catalyst in 
@@ -110,8 +201,8 @@
 			              </p>
 			            </div>
 			          </div>
-			        </li>
-			        <li class="timeline-inverted">
+					</li>
+					<li class="timeline-inverted">
 			          <div class="timeline-badge">
 			          	<i class="fa fa-briefcase" aria-hidden="true"></i>
 			          </div>
@@ -195,8 +286,9 @@
 			              		<b>Job Type : </b> Internship <br/>
 			              		<ul class="mt-3">
 			              			<li>
-			              				Leverage existing game play and Graphic designs using AdobePhotoshop to improve the way kids learn Maths by creating interactive learning environments. 
-			              			</li>
+			              				Leverage existing game play and designs to improve the way kids learn Maths by creating interactive learning content. 
+									  </li>
+								</ul>
 			              </p>
 			            </div>
 			          </div>
