--- a/pages/achievements/index.html
+++ b/pages/achievements/index.html
@@ -44,6 +44,11 @@
               <li class="nav-item active">
                     <a class="nav-link" href="https://www.facebook.com/03rishi"><i class="fa fa-facebook" aria-hidden="true"></i></a>
               </li>
+              <li class="nav-item active">
+				        <a class="nav-link" href="https://mozillians.org/en-US/u/rgpt/" target="_blank">
+				        	<i class="fa fa-firefox" aria-hidden="true"></i>
+				        </a>
+				      </li>
          </ul>
       </div>
       <div class="collapse navbar-collapse pr-5" id="navBarTop">
